[gd_scene load_steps=28 format=3 uid="uid://bpsjd6yugvpvh"]

[ext_resource type="Script" path="res://Scripts/base_body_scripts/mage_arms.gd" id="1_3wxi0"]
[ext_resource type="Texture2D" uid="uid://dponymok1nuts" path="res://Sprites/Body_parts_anims/Arms/right_mage_arm.png" id="2_foq67"]
[ext_resource type="Script" path="res://Resources/Scripts/Body_part_upgrade.gd" id="2_qkf2n"]
[ext_resource type="PackedScene" uid="uid://0mppnwm0xduq" path="res://Scenes/Body_parts/Arms/attacks/emerald_staff_attack.tscn" id="3_4t2gy"]
[ext_resource type="Texture2D" uid="uid://c50ypy7md653v" path="res://Sprites/Body_parts_anims/Arms/left_mage_arm.png" id="3_hemlp"]
[ext_resource type="Texture2D" uid="uid://sncaj18ckwp8" path="res://Sprites/Body_parts_anims/Arms/arms_attacks/regular_mage_detail.png" id="6_13dww"]

[sub_resource type="Resource" id="Resource_uh13h"]
script = ExtResource("2_qkf2n")
skill_speed = 200
skill_cooldown = 1.0
skill_dmg = 2.0
skill_hp = 0
skill_knockback = 0.0
skill_level = 1
hp_modifier = 5
defense_modifier = 0
skill_crit_chance = 0.3
speed_modifier = 0

[sub_resource type="Resource" id="Resource_vimns"]
script = ExtResource("2_qkf2n")
skill_speed = 0
skill_cooldown = 0.0
skill_dmg = 0.0
skill_hp = 0
skill_knockback = 0.0
skill_level = 2
hp_modifier = 0
defense_modifier = 0
skill_crit_chance = 0.0
speed_modifier = 0

[sub_resource type="Resource" id="Resource_5nq7p"]
script = ExtResource("2_qkf2n")
skill_speed = 0
skill_cooldown = 0.0
skill_dmg = 0.0
skill_hp = 0
skill_knockback = 0.0
skill_level = 3
hp_modifier = 0
defense_modifier = 0
skill_crit_chance = 0.0
speed_modifier = 0

[sub_resource type="Resource" id="Resource_8deg5"]
script = ExtResource("2_qkf2n")
skill_speed = 0
skill_cooldown = 0.0
skill_dmg = 0.0
skill_hp = 0
skill_knockback = 0.0
skill_level = 4
hp_modifier = 0
defense_modifier = 0
skill_crit_chance = 0.0
speed_modifier = 0

[sub_resource type="Resource" id="Resource_4uimp"]
script = ExtResource("2_qkf2n")
skill_speed = 0
skill_cooldown = 0.0
skill_dmg = 0.0
skill_hp = 0
skill_knockback = 0.0
skill_level = 5
hp_modifier = 0
defense_modifier = 0
skill_crit_chance = 0.0
speed_modifier = 0

[sub_resource type="Resource" id="Resource_62ey7"]
script = ExtResource("2_qkf2n")
skill_speed = 0
skill_cooldown = 0.0
skill_dmg = 0.0
skill_hp = 0
skill_knockback = 0.0
skill_level = 6
hp_modifier = 0
defense_modifier = 0
skill_crit_chance = 0.0
speed_modifier = 0

[sub_resource type="Resource" id="Resource_et2vt"]
script = ExtResource("2_qkf2n")
skill_speed = 0
skill_cooldown = 0.0
skill_dmg = 0.0
skill_hp = 0
skill_knockback = 0.0
skill_level = 7
hp_modifier = 0
defense_modifier = 0
skill_crit_chance = 0.0
speed_modifier = 0

[sub_resource type="Animation" id="Animation_3kipj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 3)]
}

[sub_resource type="Animation" id="Animation_vvc7s"]
resource_name = "arms"
length = 3.0
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1, 2.4, 2.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 3), Vector2(0, 6), Vector2(0, 6), Vector2(0, 6), Vector2(0, 3), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_vicgm"]
resource_name = "arms_run"
length = 2.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -3), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, -3), Vector2(0, 0), Vector2(0, 3), Vector2(0, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4xm5o"]
_data = {
"RESET": SubResource("Animation_3kipj"),
"arms": SubResource("Animation_vvc7s"),
"arms_run": SubResource("Animation_vicgm")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ov80w"]
light_mode = 1

[sub_resource type="Gradient" id="Gradient_3mniu"]
colors = PackedColorArray(0, 0.87451, 0, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_khjc1"]
gradient = SubResource("Gradient_3mniu")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_byegb"]
emission_shape = 1
emission_sphere_radius = 20.7
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
orbit_velocity_min = -0.3
orbit_velocity_max = 0.3
angle_max = 147.7
color_ramp = SubResource("GradientTexture1D_khjc1")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_npwo3"]
light_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_i4mpw"]
radius = 404.042

[sub_resource type="CircleShape2D" id="CircleShape2D_kumic"]
radius = 360.035

[sub_resource type="Animation" id="Animation_vraej"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arms_texture/Arm2:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Arms_texture/Arm2/GPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Arms_texture/Arm2/GPUParticles2D:amount")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [30]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Arms_texture/Arm2/teste:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Arms_texture/Arm2/teste:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(2, 2, 2, 1)]
}

[sub_resource type="Animation" id="Animation_f021b"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arms_texture/Arm2:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.459022, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Arms_texture/Arm2/GPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Arms_texture/Arm2/GPUParticles2D:amount")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [30]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_attack"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Arms_texture/Arm2/teste:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Arms_texture/Arm2/teste:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.1, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(2, 2, 2, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yhqgu"]
_data = {
"RESET": SubResource("Animation_vraej"),
"attack": SubResource("Animation_f021b")
}

[node name="mage_arms" type="Node2D"]
script = ExtResource("1_3wxi0")
level_upgrader = Array[ExtResource("2_qkf2n")]([SubResource("Resource_uh13h"), SubResource("Resource_vimns"), SubResource("Resource_5nq7p"), SubResource("Resource_8deg5"), SubResource("Resource_4uimp"), SubResource("Resource_62ey7"), SubResource("Resource_et2vt")])
part_name = "Mage Arms"
core_scaling_type = "mage_core"
attack_scene = ExtResource("3_4t2gy")

[node name="skill_spwn_loc" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(46.3155, -42.78)
scale = Vector2(0.999999, 0.999999)

[node name="Arms_texture" type="Sprite2D" parent="."]
position = Vector2(0, 3)
scale = Vector2(3, 3)
texture = ExtResource("2_foq67")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Arms_texture"]
speed_scale = 2.0
libraries = {
"": SubResource("AnimationLibrary_4xm5o")
}

[node name="Arm2" type="Sprite2D" parent="Arms_texture"]
z_index = -2
texture = ExtResource("3_hemlp")

[node name="GPUParticles2D" type="GPUParticles2D" parent="Arms_texture/Arm2"]
material = SubResource("CanvasItemMaterial_ov80w")
position = Vector2(15.4322, -15.4259)
rotation = 0.459022
emitting = false
amount = 30
process_material = SubResource("ParticleProcessMaterial_byegb")
local_coords = true

[node name="teste" type="Sprite2D" parent="Arms_texture/Arm2"]
visible = false
self_modulate = Color(2, 2, 2, 1)
material = SubResource("CanvasItemMaterial_npwo3")
position = Vector2(15.4997, -15.4985)
texture = ExtResource("6_13dww")

[node name="Detection_area" type="Area2D" parent="."]
visible = false
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection_area"]
shape = SubResource("CircleShape2D_i4mpw")

[node name="atk_cooldown_timer" type="Timer" parent="."]

[node name="range_area" type="Area2D" parent="."]
visible = false
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="range_area"]
shape = SubResource("CircleShape2D_kumic")
debug_color = Color(0.984314, 0, 0.352941, 0.419608)

[node name="attackAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yhqgu")
}

[connection signal="body_entered" from="Detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="Detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="atk_cooldown_timer" to="." method="_on_atk_cooldown_timer_timeout"]
[connection signal="body_entered" from="range_area" to="." method="_on_range_area_body_entered"]
